--- a/01-rules/01-fix-this-html.html
+++ b/01-rules/01-fix-this-html.html
@@ -1,9 +1,18 @@
-<html>
-    <title>My first HTML page
-    <body>
-        <h1 id=heading>My first site
-        <img src="underconstruction.gif">
-        <p>I'm sorry, but this page is &nbsp;&nbsp;<b>still</b>&nbsp;&nbsp; under construction.</b>
-        <p>I love <ahref="https://developer.mozilla.org/en-US/docs/Web/HTML">learning html</a>
-    </html>
-</body>
+<!DOCTYPE HTML>↩
+<html lang="en">↩
+    <title>My first HTML page↩
+    </title>↩
+        <body>↩
+            <h1 id=heading>My first site</h1>↩
+                <img src="under-construction.gif" alt="Still an image">↩
+                    <ul>↩
+                            <li>↩
+                                <p><b>I'm sorry, but this page is still under construction</b></p>↩
+                            </li>↩
+                            <li>↩
+                                <p><b>I love <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">learning html</a></b></p>↩
+                            </li>↩
+                    </ul>↩
+                            ↩
+        </body>↩
+</html>
