--- a/01-rules/01-fix-this-html.html
+++ b/01-rules/01-fix-this-html.html
@@ -1,17 +1,26 @@
-<!DOCTYPE HTML>↩
-<html lang="en">↩
-    <title>My first HTML page
-    </title>
-        <body>
-            <h1 id=heading>My first site</h1>↩
-                <img src="under-construction.gif" alt="Still an image">
-                <ul>
-                    <li>
-                        <p><b>I'm sorry, but this page is still under construction</b></p>
-                    </li>
-                    <li>
-                        <p><b>I love <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">learning html</a></b></p>
-                    </li>
-                </ul>
-        </body>
+<!DOCTYPE HTML>
+<html lang="en">
+    <head>
+        <title>My first HTML page</title>
+    </head>
+    <body>
+        <h1 id=heading>My first site</h1>
+        <img src="Under-construction.gif" alt="Under constraction">
+            <ul>
+                <li>
+                    <p>
+                        <b>I'm sorry, but this page is <b>still </b>under construction
+                        </b>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <b>I love 
+                            <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">learning <abbr title="Hyper Text Markup Language">HTML
+                            </a>
+                        </b>
+                    </p>
+                </li>
+            </ul>
+    </body>
 </html>
