02-tables/02-tables.html

--- a/02-tables/02-tables.html
+++ b/02-tables/02-tables.html
@@ -5,7 +5,10 @@
         <title>02:Tables</title>
     </head>
     <body>
-        <table summary="3types offruit, totalling 530 Ar">
+        <table>
+            <caption>
+                "3types offruit, totalling 530 Ar".
+            </caption>
             <thead>
                 <tr>
                     <th scope="col" id="header_item">item</th>
