03-nested-lists/lists.html

--- a/04-sectioning-elements/04-sectioning-elements.html
+++ b/04-sectioning-elements/04-sectioning-elements.html
@@ -7,11 +7,14 @@
         <link rel="stylesheet" href="sections.css">
     </head>
     <body>
-        <h1>
-            Learning
-            <abbr title="HyperText Markup Language">HTML</abbr>
-        </h1>
+        <header
+            <h1>
+                Learning
+                <abbr title="HyperText Markup Language">HTML</abbr>
+            </header>
+            </h1>
         <h2>
+            <header::before
             Sections
         </h2>
         <p>
