--- a/04-sectioning-elements/04-sectioning-elements.html
+++ b/04-sectioning-elements/04-sectioning-elements.html
@@ -7,30 +7,40 @@
         <link rel="stylesheet" href="sections.css">
     </head>
     <body>
-        <header
+        <header {
+            background-colour: rgb(206)
+        }>
             <h1>
                 Learning
                 <abbr title="HyperText Markup Language">HTML</abbr>
-            </header>
             </h1>
-        <h2>
-            <header::before
-            Sections
-        </h2>
-        <p>
-            Sectioning elements are easy to use once you know what each element does.
-        </p>
-        <p>
-            Try to learn their purpose, that’ll make it clearer.
-        </p>
-        <p>
-            ←
-            <a href="../index.md">Go back to the index</a>
-        </p>
-        <p>
-            <a href="mailto:shaun@onja.org">
+        </header>
+        <main>
+            <article>
+                <h1>
+                    <header>
+                            Sections
+                    </header>
+                </h1>
+                <p>
+                    Sectioning elements are easy to use once you know what each element does.
+                </p>
+                <p>
+                    Try to learn their purpose, that’ll make it clearer.
+                </p>
+            </article>
+        </main>
+        <nav>
+            <p>
+                ←<a href="../index.md">Go back to the index</a>
+            </p>
+        </nav>
+        <footer>
+            <p>
+                <a href="mailto:shaun@onja.org">
                 Email me for more information
-            </a>
-        </p>
+                </a>
+            </p>
+        </footer>
     </body>
 </html>
