01-rules/01-fix-this-html.html

--- a/01-rules/01-fix-this-html.html
+++ b/01-rules/01-fix-this-html.html
@@ -4,23 +4,25 @@
     <title>My first HTML page</title>
   </head>
   <body>
-    <h1 id=heading>My first site
+    <h1 id=heading>
+      My first site
     </h1>
     <img src="Under-construction.gif" alt="Under constraction">
-      <ul>
-        <li>
-          <p>
-            <b>I'm sorry, but this page is <b>still </b>under construction
-            </b>
-          </p>
-        </li>
-        <li>
-          <p>
-            <b>I love
-              <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">learning<abbr title="Hyper Text Markup Language">HTML</a>
-            </b>
-          </p>
-        </li>
-      </ul>
-  /body>
+    <p>
+      I'm sorry, but this page is
+      <b>
+        still
+      </b>
+      under construction
+    </p>
+    <p>
+      I love
+      <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+        learning
+        <abbr title="Hyper Text Markup Language">
+          HTML
+        </abbr>
+      </a>
+    </p>
+  </body>
 </html>
