04-sectioning-elements/04-sectioning-elements.html

--- a/04-sectioning-elements/04-sectioning-elements.html
+++ b/04-sectioning-elements/04-sectioning-elements.html
@@ -3,14 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>04: Sectioning elements</title>
+    <title>
+      04: Sectioning elements
+    </title>
     <link rel="stylesheet" href="sections.css">
   </head>
   <body>
     <header>
       <h1>
         Learning
-        <abbr title="HyperText Markup Language">HTML</abbr>
+        <abbr title="HyperText Markup Language">
+          HTML
+        </abbr>
       </h1>
     </header>
     <main>
