05-all-elements/05-all-elements.html

--- a/05-all-elements/05-all-elements.html
+++ b/05-all-elements/05-all-elements.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>05: All elements</title>
+    <title>
+      05: All elements
+    </title>
   </head>
 
   <body>
@@ -11,9 +13,7 @@
       <h1>All elements</h1>
     </header>
     <main>
-
       <dl>
-        <!-- Let's start with the first element, alphabetically. -->
         <dt>
           <code>&lt;a&gt;</code>
         </dt>
@@ -25,29 +25,428 @@
             It allows a user to click on the link text it provides, and navigates to that link's location.
           </p>
         </dd>
-
-        <!-- This <abbr> entry is missing some text -->
         <dt>
           <code>&lt;abbr&gt;</code>
         </dt>
         <dd>
           <p>
-
+            The abbreviation (<code>&lt;abbr&gt;</code>) is one element to shorten an expeansion content or  a goup of words.
+          </p>
+          <p>
+            It allows the reader to read the code.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;article&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The HTML <code>&lt;article&gt;</code> element represents the content of itself in a HTML document, page, which is made to be independently distributable.
           </p>
         </dd>
 
         <!-- Add the next element here as a <dt> & <dd> pair -->
-        <!--
         <dt>
-
+           <code>&lt;b&gt;</code>
         </dt>
         <dd>
-
+          <p>
+          The HTML <code>&lt;b&gt;</code> is used to create a 'b' element, which represents bold text in an HTML document.
+          </p>
+          <p>
+          It should be used to markup text as bold without conveying any extra importance.
+          </p>
         </dd>
-        -->
-
+        <dt>
+          <code>&lt;br&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The HTML <code>&lt;br&gt;</code> element produces a line break in text.
+          </p>
+          <p>
+            It is useful for writing a poem or an address, where the division of lines is significant.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;button&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;button&gt;</code> tag defines a clickable button.
+          </p>
+          <p>
+            Inside a button element you can put content, like text or images. This is the difference between this element and buttons created with the element.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;caption&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;caption&gt;</code> tag defines a table caption.igned above a table.
+          </p>
+          <p>
+            The caption tag must be inserted immediately after the tag. Note: You can specify only one caption per table. Tip: By default, a table caption will be center-aligned above a table.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;dd&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;dd&gt;</code> tag is used to describe a term/name in a description list.
+          </p>
+          <p>
+            The dd tag is used in conjunction with dl (defines a descption list) and dt (defines terms/names). Inside a dd tag you can put paragraphs, line breaks, images, links, lists, etc.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;div&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;div&gt;</code> tag defines a division or a section in an HTML document.
+          </p>
+          <p>
+            The div element is often used as a container for other HTML elements to style them with CSS or to perform certain tasks with JavaScript.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;footer&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;footer&gt;</code> tag defines a footer for a document or section.
+          </p>
+          <p>
+            A footer element should contain information about its containing element. A footer element typically contains: ... copyright information. contact information.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;h1&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;h1&gt;</code> in HTML is usuallyused to make the title the most important heading.
+          </p>
+          <p>
+            H1 defines more important heading than H6.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;h2&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;h1&gt;</code> represents a level 2 of heading in HTML document.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;h3&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;h3&gt;</code> represents a level 3 of headingin HTML document.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;h4&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;h4&gt;</code> represents a level 4 of heading in HTML document.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;h5&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;h5&gt;</code> represents a level 5 of heading in HTML document.          </p>
+        </dd>
+        <dt>
+          <code>&lt;h6&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;h6&gt;</code> represents the least important heading inHTML document.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;head&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            In an HTML file, the html <code>&lt;head&gt;</code> is the first section in the code that contains information about a web page's properties and links to external related files.
+          </p>
+          <p>
+            For example, in the HTML head, you can have the title of the page, meta tags, CSS code, Open Graph tags, and JavaScript code. Tip.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;header&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;header&gt;</code> element represents a container for introductory content or a set of navigational links.
+          </p>
+          <p>
+            A header element typically contains: one or more heading elements (h1 - h6) logo or icon. authorship information.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;HTML&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;HTML&gt;</code> is the language used to create webpages.
+          </p>
+          <p>
+            It is used to define the page layout and elements within the page.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;i&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The content of the <code>&lt;i&gt;</code> tag is usually displayed in italic. The i tag can be used to indicate term, a phrase from another language.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;iframe&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;iframe&gt;</code> is an HTML element that allows an external webpage to be embedded in an HTML document.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;img&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;img&gt;</code> tag defines an image in an HTML page. The img tag has two required attributes: src and alt.
+          </p>
+        </dd>
+         <dt>
+          <code>&lt;li&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The HTML <code>&lt;li&gt;</code> tag represents a list item in ordered and unordered lists.
+          </p>
+          <p>
+            The li tag is placed inside either a ol tag or a ul to represent each individual item within that list.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;link&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            A <code>&lt;link&gt;</code> (short for hyperlink) is an HTML object that allows you to jump to a new location when you click or tap it.
+          </p>
+          <p>
+            Links are found on almost every webpage and provide a simple means of navigating between pages on the web. Links can be attached to text, images, or other HTML elements.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;main&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;main&gt;</code> tag specifies the main content of a document.
+          <p>
+            The content inside the main element should be unique to the document. It should not contain any content that is repeated across documents such as sidebars, navigation links, copyright information, site logos, and search forms.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;meta&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            In HTML, <code>&lt;meta&gt;</code> tags or meta elements are tags placed in the head section of your code that help define the contents of a web page.
+          </p>
+          <p>
+            For example, a description meta tag is used by Internet search engines to display a description of your page in their search results.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;nav&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;nav&gt;</code> tag defines a set of navigation links.
+          </p>
+          <p>
+            The nav element is intended only for major block of navigation links. Browsers, such as screen readers for disabled users, can use this element to determine whether to omit the initial rendering of this content.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;ol&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;ol&gt;</code> tag defines an ordered list.
+          </p>
+          <p>
+            An ordered list can be numerical or alphabetical. Use the li tag to define list items.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;p&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;p&gt;</code> tag defines a paragraph.
+          </p>
+          <p>
+            Browsers automatically add some space (margin) before and after each P element. The margins can be modified with CSS (with the margin properties).
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;script&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;script&gt;</code> tag is used to define a client-side script (JavaScript).
+          </p>
+          <p>
+            The script element either contains scripting statements, or it points to an external script file through the src attribute. Common uses for JavaScript are image manipulation, form validation, and dynamic changes of content.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;section&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;section&gt;</code> tag defines sections in a document, such as chapters, headers, footers, or any other sections of the document.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;strong&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            When writing in HTML, the strong tag is an inline element used to designate a section of text with strong importance; it is usually denoted with bold font.
+          </p>
+          <p>
+            This element is unique in that it is a phrase tag, which indicates that a section of text has structural meaning.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;style&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The  <code>&lt;style&gt;</code> tag is used to define style information for an HTML document.
+          </p>
+          <p>
+            Inside the style element you specify how HTML elements should render in a browser. Each HTML document can contain multiple style tags.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;summary&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;summary&gt;</code> tag defines a visible heading for the details element.
+          </p>
+          <p>
+            The heading can be clicked to view/hide the details.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;table&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            An HTML <code>&lt;table&gt;</code> is defined with the table tag.
+          </p>
+          <p>
+            Each table ... HTML Table - Adding a Border ... Remember to define borders for both the table and the table cells.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;td&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            <code>&lt;td&gt;</code> stands for table data. By using it, you can define a cell in a table that contains certain data.
+          </p>
+          <p>
+            For your cells to remain in the same row, the td elements must be contained in the same pair of tr tags. HTML tr tags can hold any number of HTML td tags.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;tfoot&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;tfoot&gt;</code> tag is used to group footer content in an HTML table.
+          </p>
+          <p>
+            The tfoot element is used in conjunction with the thead and tbody elements to specify each part of a table (footer, header, body). Browsers can use these elements to enable scrolling of the table body independently of the header and footer.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;th&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;th&gt;</code> tag defines a header cell in an HTML table.
+          </p>
+          <p>
+            Header cells - contains header information (created with the th element) Standard cells - contains data (created with the td element)
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;thead&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;thead&gt;</code> tag is used to group header content in an HTML table.
+          </p>
+          <p>
+            The thead element is used in conjunction with the tbody and tfoot elements to specify each part of a table (header, body, footer). Browsers can use these elements to enable scrolling of the table body independently of the header and footer.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;title&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The HTML Title element ( <code>&lt;title&gt;</code> ) defines the document's title that is shown in a browser's title bar or a page's tab.
+          </p>
+          <p>
+            It only contains text; tags within the element are ignored. ... Both opening and closing tags are required.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;tr&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;tr&gt;</code> tag defines a row in an HTML table.
+          </p>
+          <p>
+            The cells inside it are defined using the th (a header cell) or the td (a standard cell).
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;ul&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            <code>&lt;ul&gt;</code> stands for unordered list. li stands for list item.
+          </p>
+          <p>
+            They are the HTML tags for "bulleted" lists as opposed to "numbered" lists (which are specified by ol for ordered list).
+          </p>
+        </dd>
       </dl>
-
     </main>
   </body>
 </html>
