06-images/06-images.html

--- a/06-images/06-images.html
+++ b/06-images/06-images.html
@@ -10,13 +10,11 @@
       img {
         max-width: 100%;
       }
-
       section {
         border: 1px solid #ccc;
         padding: 0.1rem 1rem;
         margin: 1rem 0;
       }
-
       section:target {
         border-color: blue;
       }
@@ -53,55 +51,73 @@
       </ul>
     </nav>
     <main>
-
       <section id="section_jpg">
         <header>
-          <h2>As a JPEG</h2>
-          <p>Joint Photographic Experts Group</p>
+          <h2>
+            As a JPEG
+          </h2>
+          <p>
+            Joint Photographic Experts Group
+          </p>
         </header>
-        <img src="img/FILENAME.EXT" alt>
+        <img src="img/onja_crew.jpg" alt="onja crew">
         <p>
-          JPEGs are…
+          JPEGs are good for photos.
           <!-- Insert description from the list here -->
         </p>
       </section>
-
       <section id="section_png">
         <header>
-          <h2>As a PNG</h2>
-          <p>Portable Network Graphics</p>
+          <h2>
+            As a PNG
+          </h2>
+          <p>
+            Portable Network Graphics
+          </p>
         </header>
-        <img src="img/FILENAME.EXT" alt>
+        <img src="img/logo_onja.png" alt="logo onja">
         <p>
-          PNGs are…
+          PNGs are best for vector images.
           <!-- Insert description from the list here -->
         </p>
       </section>
-
       <section id="section_svg">
         <header>
-          <h2>As an SVG</h2>
-          <p>Scalable Vector Graphics</p>
+          <h2>
+            As an SVG
+          </h2>
+          <p>
+            Scalable Vector Graphics
+          </p>
         </header>
         <img src="img/FILENAME.EXT" alt>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 37.6 38.8">
+          <title>Onja.org</title>
+          <!-- Greetings from Madagascar! -->
+          <path d="M11.88 30.22c.8-14.06 13.78-20.87 13.78-20.87-.12 14.54-13.79 20.87-13.79 20.87M18.77.06C8.4.06 0 8.7 0 19.36s8.4 19.32 18.77 19.32c10.36 0 18.77-8.65 18.77-19.31C37.54 8.7 29.14.06 18.77.06"/>
+        </svg>
         <p>
-          SVGs are…
+          SVGs are best for everything except vectors, but not widely supported.
           <!-- Insert description from the list here -->
         </p>
       </section>
-
       <section id="section_webp">
         <header>
-          <h2>As a WebP</h2>
-          <p>Web PNG</p>
+          <h2>
+            As a WebP
+          </h2>
+          <p>
+            Web PNG
+          </p>
         </header>
-        <img src="img/FILENAME.EXT" alt>
+        <img src="img/cat_typing.webp" alt="cat typing">
+        <img src="img/onja_crew.webp" alt="onja crew">
+        <img src="img/logo_onja.webp" alt="logo onja">
         <p>
-          WebPs are…
+          WebPs are great for graphics, charts, and other generated images.
           <!-- Insert description from the list here -->
         </p>
       </section>
-
     </main>
   </body>
 </html>
