--- a/06-images/06-images.html
+++ b/06-images/06-images.html
@@ -90,7 +90,7 @@
             Scalable Vector Graphics
           </p>
         </header>
-        <img src="img/FILENAME.EXT" alt>
+        <img src="img/logo_onja_disk.svg" alt>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 37.6 38.8">
           <title>Onja.org</title>
           <!-- Greetings from Madagascar! -->
