09-correct-fields/09-correct-fields.html

--- a/09-correct-fields/09-correct-fields.html
+++ b/09-correct-fields/09-correct-fields.html
@@ -49,8 +49,7 @@
         </fieldset>
         <fieldset>
           <legend>Website</legend>
-          <input type="url" name="url" id="url"
-           pattern="https://.*" size="30"
+          <input type="url" name="url" pattern="https://.*" size="30"
            required>
           <!-- The server is expecting the user's `website` address here. -->
         </fieldset>
