10-form-to-sheets/10-form-to-sheets.html

--- a/10-form-to-sheets/10-form-to-sheets.html
+++ b/10-form-to-sheets/10-form-to-sheets.html
@@ -10,11 +10,16 @@
   <body>
 
     <form action="https://script.google.com/macros/s/AKfycbx_k22UijbL8nV_HE_eFCqonZ5LtCmyZqLd_wvG3_lWoAdLGWI/exec" method="POST">
-
       <!--
         The google sheet can be found at: https://docs.google.com/spreadsheets/d/1Vnkb5rE1kgXFMt2So3RwfvfLwayVtATt1o9NM-ry9UI/edit?usp=sharing
         Create a field for each cell in the Google Sheet.
       -->
+
+      <label>
+        contributor
+      </label>
+      <input type="text" name="contributor" value="jacquit">
+
 
       <button type="submit">Save</button>
     </form>
